--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -105,6 +105,7 @@ input:checked + .slider:before {
     0 0 50px #000;
 }
 
+/** comment for exposure **/
 #meta-table {
     color: #fff;
     padding-top: 40px;
